Change the application version to 1.

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>rs.ananas</groupId>
     <artifactId>i18n-migration-tool</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0</version>
     <name>i18n-migration-tool</name>
     <description>i18n-migration-tool</description>
     <properties>
